--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,35 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .big-square {
   width: 60vh;
   height: 60vh;
+  display: flex;
+  flex-direction: column;
   border: 1px solid red;
+  &__child {
+    border: 1px solid red;
+  }
+  .square {
+    border: 1px solid red;
+    height: 100%;
+    display: flex;
+    div {
+      width: 100%;
+    }
+  }
+}
+
+.color {
+  background-color: blueviolet;
 }
