--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,9 +6,11 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .big-square {
@@ -16,12 +18,8 @@ body {
   height: 60vh;
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
-  &__child {
-    border: 1px solid red;
-  }
+  background-color: #f6e7cb;
   .square {
-    border: 1px solid red;
     height: 100%;
     display: flex;
     div {
@@ -31,5 +29,6 @@ body {
 }
 
 .color {
-  background-color: blueviolet;
+  border-radius: 50%;
+  background-color: #678d58;
 }
