--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -9,8 +11,17 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  font-family: 'Concert One', cursive;
+  .buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 30vh;
+    button {
+      font-family: 'Concert One', cursive;
+    }
+  }
 }
 
 .big-square {
