--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 }
 
 body {
+  background-color: #000000;
+  color: #70e000;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -21,6 +23,23 @@ body .buttons {
 }
 body .buttons button {
   font-family: "Concert One", cursive;
+  font-size: larger;
+  color: #70e000;
+  border: 2px solid #70e000;
+  background-color: transparent;
+  width: 13vh;
+  height: 5vh;
+  border-radius: 3rem;
+}
+body .buttons button:hover {
+  color: #d00000;
+  background-color: #70e000;
+  transition: 0.5s;
+}
+body .buttons button:disabled {
+  color: #d00000;
+  border: 2px solid #d00000;
+  background-color: transparent;
 }
 
 .big-square {
@@ -28,7 +47,7 @@ body .buttons button {
   height: 60vh;
   display: flex;
   flex-direction: column;
-  background-color: #f6e7cb;
+  background-color: #70e000;
 }
 .big-square .square {
   height: 100%;
@@ -40,5 +59,5 @@ body .buttons button {
 
 .color {
   border-radius: 50%;
-  background-color: #678d58;
+  background-color: #d00000;
 }
