--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
 }
 
 body {
+  background-color: #000000;
+  color: #70e000;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -20,6 +22,23 @@ body {
     width: 30vh;
     button {
       font-family: 'Concert One', cursive;
+      font-size: larger;
+      color: #70e000;
+      border: 2px solid #70e000;
+      background-color: transparent;
+      width: 13vh;
+      height: 5vh;
+      border-radius: 3rem;
+    }
+    button:hover {
+      color: #d00000;
+      background-color: #70e000;
+      transition: 0.5s;
+    }
+    button:disabled {
+      color: #d00000;
+      border: 2px solid #d00000;
+      background-color: transparent;
     }
   }
 }
@@ -29,7 +48,7 @@ body {
   height: 60vh;
   display: flex;
   flex-direction: column;
-  background-color: #f6e7cb;
+  background-color: #70e000;
   .square {
     height: 100%;
     display: flex;
@@ -41,5 +60,5 @@ body {
 
 .color {
   border-radius: 50%;
-  background-color: #678d58;
+  background-color: #d00000;
 }
